--- a/TestCode/ifra.html
+++ b/TestCode/ifra.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>A</title>
 </head>
 <body>
-<iframe src="https://wap.zj.10086.cn/ai/csktest/app/index.html#/custom-detail-middle-new?ticket=$1$1zIguujj$WwgclIXsZNyDfDzSxx4Kr0&externalUserId=wm-900BgAA7jjyKul_Hr8aeDEbWwu93w"></iframe>
+<iframe id="im" width="1000px" height="1000px" src="https://wap.zj.10086.cn/ai/csktest/app/index.html#/custom-detail-middle-new?ticket=$1$YVkuIMnU$dNQwzaVqrNXT0GJipjB5v.&externalUserId=wm-900BgAAohpD06j0vZbFVvLNEHaXLA" frameborder="1"></iframe>
 </body>
 </html>
